# todo-cli

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CONTRIBUTING.md
.github/workflows/: WORKFLOWS.md  ci.yml  pr-checks.yml  release.yml
src/todo_cli/: __init__.py  cli.py  models.py
tests/: __init__.py  conftest.py  test_cli.py  test_models.py
